option(
    'snoop-device',
    description: 'Linux module name of the snoop device.',
    type: 'string',
)
option(
    'post-code-bytes',
    description: 'Post code byte size.',
    type: 'integer',
    value: 1,
)
option(
    'systemd-target',
    description: 'Target for starting this service.',
    type: 'string'
)
option('no-snoop',
       type:'feature',
       description:'Builds the daemon with no-snooping support')
option(
    '7seg', type: 'feature', description: 'Enable building 7seg POST daemon.',
)
option(
    'tests', type: 'feature', description: 'Build tests.',
)
